# web3_projects_and_contributions

./: Getting on-chain transactional data using Covalent API.ipynb  Gitcoin_FDD_Hackaton_Sybil_Detection_October_2022.ipynb  ODC_first_hackathon_Sybil_Detection_october_2022
Exploratory Data Analysis Bounty Jan_2023/: README.md  climate_grant_applications.csv
Exploratory_Data_Analysis_Bounty_Jan_2023/: EDA Clima Change Round using SybilChecks package .ipynb  README.md  clima_solution_first_checks.csv  climate_grant_votes.csv
Hacking_The_Hackathon_Contributions/: README.md
Scripts and tools/: GR15_github_activity.csv  Getting on-chain transactional data using Covalent API.ipynb  github activity lego study.ipynb  gr15_grants.xlsx  grants_applications_gr15.json  organizing github lego .ipynb
ant_fraud_dashboard/: README.md
sybil_start_checks_package/sybil_start_checks/: LICENSE  README.md  checks.py  setup.cfg
sybil_start_checks_package/sybil_start_checks/SybilChecks/: checks  checks.py
web3_ant_fraud_dashboard/: README.md  github activity lego study.ipynb  github_repo_data_extraction.ipynb  lego_analysis_for_grants_review_dashboard.ipynb
