[metadata]
name = SybilChecks
version = 0.0.4
author = Stefani P
author_email = vieiraste@gmail.com
description = make first and simple checks for donnors relations to grantees/other donnors on public funding rounds on WEB3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefi-says/web3_projects_and_contributions/tree/main/sybil_start_checks_package
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
